--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^6.18.0",
+    "@radix-ui/react-slider": "^1.3.6",
     "dotenv": "^17.2.3",
     "lucide": "^0.548.0",
+    "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "^19.2.0",
     "react-dom": "19.2.0"
