--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
     "react": "^19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "sonner": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
